# Autoformer

./: .gitignore  README.md  pyproject.toml
autoformer/data_provider/: dataset.py
autoformer/layers/: autocorrelation.py  decoder.py  decomposition.py  embedding.py  encoder.py  norm.py
autoformer/model/: autoformer.py
autoformer/trainer/: trainer.py
