[tool.poetry]
name = "autoformer"
version = "0.1.0"
description = "A simpler and documented version of the official Autoformer"
authors = ["grostaco <grostaco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
pandas = "1.4.2"
scikit-learn = "1.2.2"
numpy = "1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
